--- a/test_features.ipynb
+++ b/test_features.ipynb
@@ -508,41 +508,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9/test_features.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m  \u001b[39m# Or some indication that the calculation can't be performed\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Apply the function across the DataFrame\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mNumber of Followers\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m merged_df\u001b[39m.\u001b[39;49mapply(calculate_followers, axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Check the results\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m merged_df[[\u001b[39m'\u001b[39m\u001b[39mNumber of Reactions\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mNumber of Shares.1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mNumber of Comments (primary)\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mEngagement\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mNumber of Followers\u001b[39m\u001b[39m'\u001b[39m]]\u001b[39m.\u001b[39mhead()\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/frame.py:10034\u001b[0m, in \u001b[0;36mDataFrame.apply\u001b[0;34m(self, func, axis, raw, result_type, args, by_row, **kwargs)\u001b[0m\n\u001b[1;32m  10022\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapply\u001b[39;00m \u001b[39mimport\u001b[39;00m frame_apply\n\u001b[1;32m  10024\u001b[0m op \u001b[39m=\u001b[39m frame_apply(\n\u001b[1;32m  10025\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m  10026\u001b[0m     func\u001b[39m=\u001b[39mfunc,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m  10032\u001b[0m     kwargs\u001b[39m=\u001b[39mkwargs,\n\u001b[1;32m  10033\u001b[0m )\n\u001b[0;32m> 10034\u001b[0m \u001b[39mreturn\u001b[39;00m op\u001b[39m.\u001b[39;49mapply()\u001b[39m.\u001b[39m__finalize__(\u001b[39mself\u001b[39m, method\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mapply\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/apply.py:837\u001b[0m, in \u001b[0;36mFrameApply.apply\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    834\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mraw:\n\u001b[1;32m    835\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_raw()\n\u001b[0;32m--> 837\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/apply.py:965\u001b[0m, in \u001b[0;36mFrameApply.apply_standard\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    964\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply_standard\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m--> 965\u001b[0m     results, res_index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_series_generator()\n\u001b[1;32m    967\u001b[0m     \u001b[39m# wrap results\u001b[39;00m\n\u001b[1;32m    968\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwrap_results(results, res_index)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/apply.py:981\u001b[0m, in \u001b[0;36mFrameApply.apply_series_generator\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    978\u001b[0m \u001b[39mwith\u001b[39;00m option_context(\u001b[39m\"\u001b[39m\u001b[39mmode.chained_assignment\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    979\u001b[0m     \u001b[39mfor\u001b[39;00m i, v \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(series_gen):\n\u001b[1;32m    980\u001b[0m         \u001b[39m# ignore SettingWithCopy here in case the user mutates\u001b[39;00m\n\u001b[0;32m--> 981\u001b[0m         results[i] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfunc(v, \u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mkwargs)\n\u001b[1;32m    982\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(results[i], ABCSeries):\n\u001b[1;32m    983\u001b[0m             \u001b[39m# If we have a view on v, we need to make a copy because\u001b[39;00m\n\u001b[1;32m    984\u001b[0m             \u001b[39m#  series_generator will swap out the underlying data\u001b[39;00m\n\u001b[1;32m    985\u001b[0m             results[i] \u001b[39m=\u001b[39m results[i]\u001b[39m.\u001b[39mcopy(deep\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "\u001b[1;32m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9/test_features.ipynb Cell 5\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m total_engagement \u001b[39m=\u001b[39m row[\u001b[39m'\u001b[39m\u001b[39mNumber of Reactions\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m+\u001b[39m row[\u001b[39m'\u001b[39m\u001b[39mNumber of Shares.1\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m+\u001b[39m row[\u001b[39m'\u001b[39m\u001b[39mNumber of Comments (primary)\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m engagement_rate \u001b[39m=\u001b[39m row[\u001b[39m'\u001b[39m\u001b[39mEngagement\u001b[39m\u001b[39m'\u001b[39m]  \u001b[39m# Assuming this is in percentage\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mif\u001b[39;00m engagement_rate \u001b[39m>\u001b[39;49m \u001b[39m0\u001b[39;49m:  \u001b[39m# To avoid division by zero\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m total_engagement \u001b[39m/\u001b[39m (engagement_rate \u001b[39m/\u001b[39m \u001b[39m100\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number of Reactions</th>\n",
+       "      <th>Number of Shares.1</th>\n",
+       "      <th>Number of Comments (primary)</th>\n",
+       "      <th>Engagement</th>\n",
+       "      <th>Number of Followers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1090000000000,00</td>\n",
+       "      <td>1.834862e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>417000000000,00</td>\n",
+       "      <td>9.832134e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>285000000000,00</td>\n",
+       "      <td>9.824561e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>136000000000,00</td>\n",
+       "      <td>5.220588e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>496000000000,00</td>\n",
+       "      <td>3.830645e-09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Number of Reactions  Number of Shares.1  Number of Comments (primary)  \\\n",
+       "0                 16.0                 2.0                           2.0   \n",
+       "1                 38.0                 2.0                           1.0   \n",
+       "2                 23.0                 3.0                           2.0   \n",
+       "3                646.0                12.0                          52.0   \n",
+       "4                 17.0                 0.0                           2.0   \n",
+       "\n",
+       "         Engagement  Number of Followers  \n",
+       "0  1090000000000,00         1.834862e-09  \n",
+       "1   417000000000,00         9.832134e-09  \n",
+       "2   285000000000,00         9.824561e-09  \n",
+       "3   136000000000,00         5.220588e-07  \n",
+       "4   496000000000,00         3.830645e-09  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define a function to calculate the number of followers for a row\n",
     "def calculate_followers(row):\n",
-    "    total_engagement = row['Number of Reactions'] + row['Number of Shares.1'] + row['Number of Comments (primary)']\n",
-    "    engagement_rate = row['Engagement']  # Assuming this is in percentage\n",
-    "    if engagement_rate > 0:  # To avoid division by zero\n",
-    "        return total_engagement / (engagement_rate / 100)\n",
+    "    # Ensure the engagement rate is treated as a float\n",
+    "    # Replace commas with dots and convert to float\n",
+    "    engagement_rate_str = row['Engagement'].replace(',', '.')\n",
+    "    engagement_rate = float(engagement_rate_str) / 100  # Convert percentages to proportions\n",
+    "    \n",
+    "    # Convert scientific notation strings to float if necessary for engagement metrics\n",
+    "    # Replace commas with dots for each metric and convert to float\n",
+    "    total_engagement = sum(float(str(val).replace(',', '.')) for val in [row['Number of Reactions'], row['Number of Shares.1'], row['Number of Comments (primary)']])\n",
+    "    \n",
+    "    # Check if engagement_rate is greater than 0 to avoid division by zero\n",
+    "    if engagement_rate > 0:\n",
+    "        return total_engagement / engagement_rate\n",
     "    else:\n",
-    "        return None  # Or some indication that the calculation can't be performed\n",
+    "        return None  # Unable to calculate if engagement rate is 0 or not numeric\n",
     "\n",
     "# Apply the function across the DataFrame\n",
     "merged_df['Number of Followers'] = merged_df.apply(calculate_followers, axis=1)\n",
     "\n",
     "# Check the results\n",
-    "merged_df[['Number of Reactions', 'Number of Shares.1', 'Number of Comments (primary)', 'Engagement', 'Number of Followers']].head()"
+    "merged_df[['Number of Reactions', 'Number of Shares.1', 'Number of Comments (primary)', 'Engagement', 'Number of Followers']].head()\n"
    ]
   },
   {
@@ -591,27 +675,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 15443 entries, 0 to 15442\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column      Non-Null Count  Dtype \n",
-      "---  ------      --------------  ----- \n",
-      " 0   Engagement  15443 non-null  object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 120.8+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Engagement</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1090000000000,00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>417000000000,00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>285000000000,00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>136000000000,00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>496000000000,00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.0012457732692649937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.0035718617597483805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1510000000000,00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.002332185043750723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4140000000000,00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2280000000000,00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Engagement\n",
+       "0        1090000000000,00\n",
+       "1         417000000000,00\n",
+       "2         285000000000,00\n",
+       "3         136000000000,00\n",
+       "4         496000000000,00\n",
+       "5   0.0012457732692649937\n",
+       "6   0.0035718617597483805\n",
+       "7        1510000000000,00\n",
+       "8    0.002332185043750723\n",
+       "9        4140000000000,00\n",
+       "10       2280000000000,00"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df[['Engagement']].head(11)\n",
-    "merged_df[['Engagement']].info()"
+    "merged_df[['Engagement']].head(11)\n"
    ]
   },
   {
