--- a/test_features.ipynb
+++ b/test_features.ipynb
@@ -1363,6 +1363,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming your DataFrame is named df\n",
+    "unique_profiles = merged_df.drop_duplicates(subset=['Profile-ID'])\n",
+    "\n",
+    "# Print the unique profiles\n",
+    "unique_profiles[['Profile', 'Profile-ID', 'Estimated Followers']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
