--- a/test_features.ipynb
+++ b/test_features.ipynb
@@ -1500,6 +1500,371 @@
     "# Display the first few rows to check the new features\n",
     "merged_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Profile</th>\n",
+       "      <th>Message</th>\n",
+       "      <th>text_length</th>\n",
+       "      <th>hashtag_count</th>\n",
+       "      <th>readability_score</th>\n",
+       "      <th>emoji_count</th>\n",
+       "      <th>total_score</th>\n",
+       "      <th>Link-posts</th>\n",
+       "      <th>Picture Posts</th>\n",
+       "      <th>Video-posts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wild Adventures Theme Park</td>\n",
+       "      <td>🎟️🚨 Today's the FINAL day to use your 2023 Sea...</td>\n",
+       "      <td>337</td>\n",
+       "      <td>57</td>\n",
+       "      <td>74.69</td>\n",
+       "      <td>7</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>See you next year! 😉                Don’t miss...</td>\n",
+       "      <td>141</td>\n",
+       "      <td>19</td>\n",
+       "      <td>87.72</td>\n",
+       "      <td>3</td>\n",
+       "      <td>76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>Don't miss our HUGE firework display ! 🥳\\n\\n#f...</td>\n",
+       "      <td>128</td>\n",
+       "      <td>16</td>\n",
+       "      <td>38.99</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Disneyland Paris</td>\n",
+       "      <td>Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>48.47</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Silverwood Theme Park</td>\n",
+       "      <td>It's the last day of our New Year's Sale! Save...</td>\n",
+       "      <td>227</td>\n",
+       "      <td>40</td>\n",
+       "      <td>83.36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Belmont Park</td>\n",
+       "      <td>The sun sets over 2023…🌅\\n\\nWishing everyone a...</td>\n",
+       "      <td>342</td>\n",
+       "      <td>64</td>\n",
+       "      <td>90.09</td>\n",
+       "      <td>4</td>\n",
+       "      <td>105</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SeaWorld Orlando</td>\n",
+       "      <td>Animal rescue and rehabilitation has always be...</td>\n",
+       "      <td>602</td>\n",
+       "      <td>100</td>\n",
+       "      <td>56.96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1366</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Canada's Wonderland</td>\n",
+       "      <td>As this roller coaster of a year comes to a th...</td>\n",
+       "      <td>212</td>\n",
+       "      <td>39</td>\n",
+       "      <td>86.03</td>\n",
+       "      <td>4</td>\n",
+       "      <td>239</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>SeaWorld San Diego</td>\n",
+       "      <td>As we close out 2023, we want to take a moment...</td>\n",
+       "      <td>528</td>\n",
+       "      <td>98</td>\n",
+       "      <td>68.70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>454</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Lake Compounce</td>\n",
+       "      <td>Who’s ready to party tonight? 🪩\\n\\nJoin Kyle t...</td>\n",
+       "      <td>339</td>\n",
+       "      <td>51</td>\n",
+       "      <td>68.77</td>\n",
+       "      <td>7</td>\n",
+       "      <td>120</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Profile  \\\n",
+       "0  Wild Adventures Theme Park   \n",
+       "1            Fun Spot America   \n",
+       "2            Fun Spot America   \n",
+       "3            Disneyland Paris   \n",
+       "4       Silverwood Theme Park   \n",
+       "5                Belmont Park   \n",
+       "6            SeaWorld Orlando   \n",
+       "7         Canada's Wonderland   \n",
+       "8          SeaWorld San Diego   \n",
+       "9              Lake Compounce   \n",
+       "\n",
+       "                                             Message  text_length  \\\n",
+       "0  🎟️🚨 Today's the FINAL day to use your 2023 Sea...          337   \n",
+       "1  See you next year! 😉                Don’t miss...          141   \n",
+       "2  Don't miss our HUGE firework display ! 🥳\\n\\n#f...          128   \n",
+       "3     Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉           45   \n",
+       "4  It's the last day of our New Year's Sale! Save...          227   \n",
+       "5  The sun sets over 2023…🌅\\n\\nWishing everyone a...          342   \n",
+       "6  Animal rescue and rehabilitation has always be...          602   \n",
+       "7  As this roller coaster of a year comes to a th...          212   \n",
+       "8  As we close out 2023, we want to take a moment...          528   \n",
+       "9  Who’s ready to party tonight? 🪩\\n\\nJoin Kyle t...          339   \n",
+       "\n",
+       "   hashtag_count  readability_score  emoji_count  total_score  Link-posts  \\\n",
+       "0             57              74.69            7           37         0.0   \n",
+       "1             19              87.72            3           76         0.0   \n",
+       "2             16              38.99            1           53         0.0   \n",
+       "3              8              48.47            3         1300         0.0   \n",
+       "4             40              83.36            0           39         0.0   \n",
+       "5             64              90.09            4          105         0.0   \n",
+       "6            100              56.96            0         1366         0.0   \n",
+       "7             39              86.03            4          239         0.0   \n",
+       "8             98              68.70            0          454         0.0   \n",
+       "9             51              68.77            7          120         0.0   \n",
+       "\n",
+       "   Picture Posts  Video-posts  \n",
+       "0            1.0          0.0  \n",
+       "1            0.0          0.0  \n",
+       "2            0.0          1.0  \n",
+       "3            1.0          0.0  \n",
+       "4            0.0          1.0  \n",
+       "5            1.0          0.0  \n",
+       "6            1.0          0.0  \n",
+       "7            0.0          1.0  \n",
+       "8            0.0          1.0  \n",
+       "9            1.0          0.0  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df[['Profile', 'Message', 'text_length', 'hashtag_count', 'readability_score', 'emoji_count', 'total_score', 'Link-posts', 'Picture Posts', 'Video-posts']].head(10)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of independent variables\n",
+    "independent_vars = ['text_length', 'hashtag_count', 'readability_score', 'emoji_count']\n",
+    "\n",
+    "# List of post type columns\n",
+    "post_type_columns = ['Link-posts', 'Picture Posts', 'Video-posts']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Independent Variable: text_length\n",
+      "Post Type: Link-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.790007753885036, p-value: 9.625893827440416e-88\n",
+      "Levene's Test - Statistic: 11.696975179529277, p-value: 0.0006276371042500457\n",
+      "\n",
+      "Post Type: Picture Posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.790007753885036, p-value: 9.625893827440416e-88\n",
+      "Levene's Test - Statistic: 110.57610540390004, p-value: 8.95530243538933e-26\n",
+      "\n",
+      "Post Type: Video-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.790007753885036, p-value: 9.625893827440416e-88\n",
+      "Levene's Test - Statistic: 103.89039358549292, p-value: 2.553050308532204e-24\n",
+      "\n",
+      "Independent Variable: hashtag_count\n",
+      "Post Type: Link-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.8095190053820264, p-value: 1.7642433792281217e-85\n",
+      "Levene's Test - Statistic: 7.362166454427377, p-value: 0.0066684354150481455\n",
+      "\n",
+      "Post Type: Picture Posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.8095190053820264, p-value: 1.7642433792281217e-85\n",
+      "Levene's Test - Statistic: 93.21391949304832, p-value: 5.415833236555444e-22\n",
+      "\n",
+      "Post Type: Video-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.8095190053820264, p-value: 1.7642433792281217e-85\n",
+      "Levene's Test - Statistic: 80.83309114987013, p-value: 2.736266333661143e-19\n",
+      "\n",
+      "Independent Variable: readability_score\n",
+      "Post Type: Link-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.6664021005735064, p-value: 6.7598622282528765e-99\n",
+      "Levene's Test - Statistic: 17.52775892795719, p-value: 2.847126085982847e-05\n",
+      "\n",
+      "Post Type: Picture Posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.6664021005735064, p-value: 6.7598622282528765e-99\n",
+      "Levene's Test - Statistic: 15.841841833917865, p-value: 6.917768835636128e-05\n",
+      "\n",
+      "Post Type: Video-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.6664021005735064, p-value: 6.7598622282528765e-99\n",
+      "Levene's Test - Statistic: 39.225751286850205, p-value: 3.875208754172566e-10\n",
+      "\n",
+      "Independent Variable: emoji_count\n",
+      "Post Type: Link-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.7779308804761895, p-value: 4.700297052720129e-89\n",
+      "Levene's Test - Statistic: 2.429169572628648, p-value: 0.1191164692021913\n",
+      "\n",
+      "Post Type: Picture Posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.7779308804761895, p-value: 4.700297052720129e-89\n",
+      "Levene's Test - Statistic: 50.89223825660831, p-value: 1.0191433408221548e-12\n",
+      "\n",
+      "Post Type: Video-posts\n",
+      "Shapiro-Wilk Test - Statistic: 0.7779308804761895, p-value: 4.700297052720129e-89\n",
+      "Levene's Test - Statistic: 71.62909620564358, p-value: 2.8277057530629756e-17\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+      "/var/folders/7l/b916kv5120d_jxhh50x6gjxw0000gn/T/ipykernel_4288/1759908890.py:15: UserWarning: scipy.stats.shapiro: For N > 5000, computed p-value may not be accurate. Current N is 15443.\n",
+      "  shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import shapiro, levene\n",
+    "\n",
+    "# Iterate over each independent variable\n",
+    "for var in independent_vars:\n",
+    "    print(f\"Independent Variable: {var}\")\n",
+    "    \n",
+    "    # Iterate over each post type column\n",
+    "    for post_type in post_type_columns:\n",
+    "        print(f\"Post Type: {post_type}\")\n",
+    "        \n",
+    "        # Extract data for the current combination of independent variable and post type\n",
+    "        data = merged_df[[var, post_type]].dropna()\n",
+    "        \n",
+    "        # Perform Shapiro-Wilk test for normality\n",
+    "        shapiro_test_statistic, shapiro_p_value = shapiro(data[var])\n",
+    "        print(f\"Shapiro-Wilk Test - Statistic: {shapiro_test_statistic}, p-value: {shapiro_p_value}\")\n",
+    "        \n",
+    "        # Perform Levene's test for homogeneity\n",
+    "        levene_test_statistic, levene_p_value = levene(*[data[data[post_type] == pt][var] for pt in data[post_type].unique()])\n",
+    "        print(f\"Levene's Test - Statistic: {levene_test_statistic}, p-value: {levene_p_value}\")\n",
+    "        \n",
+    "        print()  # Blank line for better readability\n"
+   ]
   }
  ],
  "metadata": {
